<resources>
    <string name="app_name">BEU Mobil</string>

    <string name="title_main">Ana Sayfa</string>
    <string name="title_announcements">Duyurular</string>
    <string name="title_news">Haberler</string>
    <string name="title_activitycalender">Etkinlik Takvimi</string>
    <string name="title_foodlist">Yemek Listesi</string>
    <string name="title_academiccalender">Akademik Takvim</string>
    <string name="title_students">Öğrenci</string>
    <string name="title_ekampus">E-Kampüs</string>
    <string name="title_eposta">E-Posta</string>
    <string name="title_uzem">UZEM</string>
    <string name="title_campusview">Kampüs Görünümü</string>
    <string name="title_section_about1">İletişim</string>
    <string name="title_version">Versiyon : Beta</string>
    <string name="title_karaelmasedutr">karaelmas.edu.tr</string>
    <string name="title_beunedutr">beun.edu.tr</string>

    <string name="navigation_drawer_open">Menüyü aç</string>
    <string name="navigation_drawer_close">Menüyü kapat</string>


    //NavigationView
    <string name="closeDrawer">Menü</string>
    <string name="openDrawer">Menü kapalı</string>
    <string name="ana_sayfa_title">BEU Mobil</string>
    <string name="duyuru_title">Duyurular</string>
    <string name="haber_title">Haberler</string>
    <string name="etkinlik_title">Etkinlik Takvimi</string>
    <string name="yemek_title">Yemek Listesi</string>
    <string name="akademik_title">Akademik Takvim</string>
    <string name="e_kampus_title">E-Kampüs</string>
    <string name="e_posta_title">E-Posta</string>
    <string name="uzem_title">Uzaktan Eğitim Merkezi</string>
    <string name="kampus_title">Kampüs Görünümü</string>
    <string name="toast_facebook">Facebook yönlendirmesi yapılıyor</string>
    <string name="toast_twitter">Twitter yönlendirmesi yapılıyor</string>
    <string name="toast_instagram">Instagram yönlendirmesi yapılıyor</string>
    <string name="toast_youtube">YouTube yönlendirmesi yapılıyor</string>


    //Anasayfa
    <string name="loading">Yükleniyor</string>
    <string name="loading_progress">Yükleniyor </string>
    <string name="mainweb_page">Ana Sayfa</string>
    <string name="waitfor">Lütfen biraz bekleyiniz …</string>
    <string name="alphatext">Bülent Ecevit Üniversity Application Version Pre-Alpha 0.9</string>
    <string name="last_duyuru">Son \nDuyuru</string>
    <string name="last_haber">Son \nHaber</string>
    <string name="last_etkinlik">Son \nEtkinlik</string>
    <string name="last_food">Günün Menüsü</string>
    <string name="no_connection">Lütfen internet bağlantınızı kontrol ediniz.</string>


    //DHE
    <string name="empty_duyuru">Gösterilecek yeni duyuru\n bulunmamaktadır.</string>
    <string name="empty_haber">Gösterilecek yeni haber\n bulunmamaktadır.</string>
    <string name="empty_etkinlik">Yaklaşan yeni etkinlik\n bulunmamaktadır.</string>

    //Toasts
    <string name="ekampus">E-Kampüs Sayfanız Yukleniyor …</string>
    <string name="duyuru_no_data">Seçtiğiniz tarih içerisinde duyuru bulunmamaktadır.</string>
    <string name="haber_no_data">Seçtiğiniz tarih içerisinde haber bulunmamaktadır.</string>
    <string name="etkinlik_no_data">Seçtiğiniz tarih içerisinde etkinlik bulunmamaktadır.</string>
    <string name="yemek_no_data">Henüz yemek girişi yapılmamıştır.</string>
    <string name="connection">Lütfen internet bağlantınızı kontrol ediniz.
    Bağlı olmadığınız takdirde bazı servisleri kullanamayabilirsiniz.</string>
    <string name="location">Konum servisleriniz kapalı olduğu
        takdirde bazı servisleri kullanamayabilirsiniz.</string>
    <string name="exit_app">Çıkmak isterseniz bir kere daha geri tuşuna basınız.</string>
    <string name="unexpected_error">Bir hatayla karşılaşıldı
        lütfen hakkında bölümünden geri bilidirim yapınız.</string>
    <string name="closed_restaurant">Yemekhane hafta sonu kapalıdır.\n  ¯\_(ツ)_/¯   </string>
    <string name="closed_akademik">"Bu servisimiz geçici olarak servis dışıdır.\n\t\tEn kısa zamanda düzeltilecektir."</string>


    //Toolbar
    <string name="action_about">Hakkında</string>
    <string name="action_openweb">Chrome ile aç</string>
    <string name="action_share">Paylaş</string>
    <string name="action_close">Pencereyi kapat</string>
    <string name="action_home">Ana Sayfa</string>
    <string name="action_food">Aylık Liste</string>


    //DialogMessages
    <string name="connection_decision">İnternete bağlı değilsiniz.
    İnternetinizi açmak ister misiniz ?</string>
    <string name="location_decision">Konum servisleriniz kapalı durumdadır.
    Konum servislerinizi açmak ister misiniz ?</string>
    <string name="appexit_decision">Uygulamadan çıkmak istediğinize emin misiniz ?</string>

    //Tarih
    <string name="date_picker">Lütfen tarih seçiniz</string>

    //Farabi Kampüsü
    <string name="farabi_title">Farabi Kampüsü</string>
    <string name="farabi_bidb">Bilgi İşlem Daire Başkanlığı</string>
    <string name="farabi_rektorluk">Rektörlük Binası</string>
    <string name="farabi_eem">Elektrik Elektronik Mühendisliği</string>
    <string name="farabi_sem">BEÜN Sem</string>
    <string name="farabi_maden">Maden Mühendisliği</string>
    <string name="farabi_makina">Makina Mühendisliği</string>
    <string name="farabi_insaat">İnşaat Mühendisliği</string>
    <string name="farabi_restoran">BEÜN Misafirhane-Restoran</string>
    <string name="farabi_spor">Spor Salonu</string>
    <string name="farabi_ust">Üst Kapı</string>
    <string name="farabi_alt">Alt Kapı</string>
    <string name="farabi_muhdekan">Mühendislik Fakültesi Dekanlığı</string>
    <string name="farabi_giris">BEU</string>
    <string name="farabi_3d">3 Boyutlu gezinmek için tıklayın.</string>

    //Farabi3D
    <string name="beu3d">Bülent Ecevit Üniversitesi 3 Boyutlu olarak
        yükleniyor bu biraz zaman alabilir.</string>
    <string name="beu3d_none">Seçtiğiniz bölüm henüz yapım aşamasındadır.</string>
    <string name="beu3d_bidb">Bilgi İşlem Daire Başkanlığı 3 Boyutlu olarak
        yükleniyor bu biraz zaman alabilir…</string>
    <string name="beu3d_eem">Elektrik Elektronik Mühendisliği 3 Boyutlu olarak
        yükleniyor bu biraz zaman alabilir…</string>
    <string name="beu3d_rektorluk">Rektörlük binası 3 Boyutlu olarak
        yükleniyor bu biraz zaman alabilir…</string>

    //Ibn-i Sina Kampüsü
    <string name="ibni_title">İbn-i Sina Kampüsü</string>

    //Yemek Listesi Tab
    <string name="tab_pazartesi">Pzt</string>
    <string name="tab_sali">Salı</string>
    <string name="tab_carsamba">Çarş</string>
    <string name="tab_persembe">Perş</string>
    <string name="tab_cuma">Cuma</string>
    <string name="loading_yemek">Yükleniyor…</string>
    <string name="soon">Yakında Hizmetinizde</string>
    <string name="monthly_list">Aylık Liste</string>
    <string name="weekend_food">Hafta sonu yemek bulunmamaktadır.</string>
    <string name="use_foodtab">Lütfen Yemek Listesi Sekmesini kullanınız.</string>

    //Resimler
    <string name="gallery">Galeri için tıklayınız</string>


    //Akademik Takvim
    <string name="genel_takvim">Genel Akademik Takvim</string>
    <string name="dis_takvim">Diş Hekimliği Fakültesi</string>
    <string name="enstitu_takvim">Enstitüler</string>
    <string name="hazirlik_takvim">Hazırlık Sınıfları</string>
    <string name="tip_takvim">Tıp Fakültesi</string>
    <string name="uluslarasi_takvim">Uluslararası Öğrenciler</string>
    <string name="ygi_takvim">Yatay Geçiş İşlemleri</string>
    <string name="yaz_takvim">Yaz Okulu</string>
    <string name="yetenek_takvim">Yetenek Sınavları</string>
    <string name="kayg_takvim">Kurumlar Arası Yatay Geçiş</string>
    <string name="kyg_takvim">Kurumiçi Yatay Geçiş</string>
    <string name="myp_takvim">Merkezi Yerleştirme Puanı</string>
    <string name="yca_takvim">Yandal ve Çift Anadal</string>
    <string name="besy_takvim">Beden Eğitimi ve Spor Yüksekokulu</string>
    <string name="dk_takvim">Devlet Konservatuvarı</string>
    <string name="gsf_takvim">Güzel Sanatlar Fakültesi</string>


    //GBYTab Akademik Takvim
    <string name="tab_guz">Güz Yarıyılı</string>
    <string name="tab_bahar">Bahar Yarıyılı</string>
    <string name="tab_yaz">Yaz Dönemi</string>
    <string name="empty_guz">Güz dönemine ait takvim\n bulunmamaktadır.</string>
    <string name="empty_bahar">Bahar dönemine ait takvim\n bulunmamaktadır.</string>
    <string name="empty_yaz">Yaz dönemine ait takvim\n bulunmamaktadır.</string>
    <string name="ygi_picker">Yatay geçiş işlemleri</string>
    <string name="ys_picker">Yetenek Sınavları</string>


    //İletisim ve Hakkında
    <string name="about_beta">Yapım aşamasında.</string>
    <string name="about_contact">İletişim</string>
    <string name="about_about">Hakkında</string>


    //İletisim
    <string name="iletisim_eposta_title">E-Posta</string>
    <string name="iletisim_eposta">info@beun.edu.tr</string>
    <string name="iletisim_santral_title">Santral</string>
    <string name="iletisim_santral">0372 291 11 00</string>
    <string name="iletisim_faks_title">Belgegeçer/faks</string>
    <string name="iletisim_faks1">0372 257 21 40</string>
    <string name="iletisim_faks2">0372 257 50 78</string>
    <string name="iletisim_adres_title">Adres</string>
    <string name="iletisim_adres">Bülent Ecevit Üniversitesi Rektörlüğü PK:67100 İncivez/ZONGULDAK</string>
    <string name="iletisim_sekreter_title">Genel Sekreterlik</string>
    <string name="iletisim_sekreter">Tel :0372 291 13 26</string>
    <string name="iletisim_akademik_title">Akademik Birimlerin Telefon Numaraları</string>


    //Hakkında
    <string name="beun_title">Bülent Ecevit Üniversitesi</string>
    <string name="bidb">Bilgi İşlem Daire Başkanlığı</string>
    <string name="software_title">Yazılım Birimi</string>
    <string name="developer">BEU Öğrencileri</string>
    <string name="feedbackemail">mtdetroit@gmail.com</string>
    <string name="feedback">Geri Bildirim için :</string>
    <string name="version">Versiyonu : UMD-1.04</string>
    <string name="developing">Tarafından geliştirilmiştir.\nTicari bir amaca yönelik değildir.\nVerilen bilgilerin kesinlikle resmi geçerliliği yoktur. \nProjemiz yakında kaynak kodlarını açacaktır.</string>

</resources>
