<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_yemeklistesi"
            android:checked="false"
            android:icon="@drawable/ic_food"
            android:title="@string/title_foodlist" />
        <item
            android:id="@+id/item_akademik"
            android:checked="false"
            android:icon="@drawable/ic_acedemic"
            android:title="@string/title_academiccalender" />
        <item
            android:id="@+id/item_ogrenci"
            android:checked="false"
            android:icon="@drawable/ic_students"
            android:title="@string/title_students" />
        <item
            android:id="@+id/item_ekampus"
            android:checked="false"
            android:icon="@drawable/ic_ekampus"
            android:title="@string/title_ekampus" />
        <item
            android:id="@+id/item_eposta"
            android:checked="false"
            android:icon="@drawable/ic_email"
            android:title="@string/title_eposta" />
        <item
            android:id="@+id/item_uzem"
            android:checked="false"
            android:icon="@drawable/ic_uzem"
            android:title="@string/title_uzem" />
    </group>
    <group
        android:id="@+id/menu2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_kampusgorunumu"
            android:checked="false"
            android:icon="@drawable/ic_navigate"
            android:title="@string/title_campusview" />
        <item
            android:id="@+id/item_about"
            android:checked="false"
            android:icon="@drawable/ic_coding"
            android:title="@string/action_about" />
    </group>
</menu>